--- a/LeaveManagementSystem/Views/Account/UpdatePassword.cshtml
+++ b/LeaveManagementSystem/Views/Account/UpdatePassword.cshtml
@@ -3,6 +3,10 @@
     ViewBag.Title = "UpdatePassword";
 }
 
+@{
+    Html.RenderPartial("_EmployeePartialView");
+}
+
 <link rel="stylesheet" href="~/Content/CustomStyleSheet.css">
 
 
@@ -11,20 +15,26 @@
 
     <hr>
 
+
     @using (Html.BeginForm("updatepassword", "account", FormMethod.Post))
     {
         @Html.LabelFor(temp => temp.Password)
-        @Html.PasswordFor(temp => temp.Password)
+        @Html.PasswordFor(temp => temp.Password, new { @class = "text-danger", required = "required" })
 
 
-        @Html.LabelFor(temp => temp.ConfirmPassword)
-        @Html.PasswordFor(temp => temp.ConfirmPassword)
-        <p id="validate-status"></p>
+
+        @Html.LabelFor(temp => temp.ConfirmPassword, "Confirm Password")
+        @Html.PasswordFor(temp => temp.ConfirmPassword, new { @class = "text-danger", required = "required" })
+
 
         @Html.HiddenFor(temp => temp.EmployeeID)
 
+        <span class="text-danger">
+            @Html.ValidationSummary()
+        </span>
 
         <button type="submit" class="btn btn-success">Save</button>
+
     }
 
 
@@ -34,21 +44,47 @@
 
 
 </div>
+
+@if (ViewBag.Response != null)
+{
+    <script>
+        alert("@ViewBag.Response");
+    </script>
+
+}
+
+
+
+
+
+
 <script>
     $(document).ready(function () {
         $("#ConfirmPassword").blur(validate);
         function validate(event) {
-            var password1 = $("#Password").val();
-            var password2 = $("#ConfirmPassword").val();
+            var password = $("#Password").val();
+            var ConfirmPassword = $("#ConfirmPassword").val();
 
-            if (password1 == password2) {
-                $("#validate-status").text("match").css("color", "green");
+            if (password == ConfirmPassword) {
+                $("#validate-status").text("password match").css("color", "green");
             }
             else {
-                $("#validate-status").text("not match").css("color", "red");
+                $("#validate-status").text("password not match").css("color", "red");
             }
 
         }
     });
+
+</script>
+
+<style>
+    #active {
+        background-color: grey !important;
+        color: white !important;
+    }
+</style>
+<script>
+
+    $("a[href='/Account/updatepassword']").attr("id", "active");
 
 </script>
