--- a/LeaveManagementSystem/Views/Leave/VerifyLeave.cshtml
+++ b/LeaveManagementSystem/Views/Leave/VerifyLeave.cshtml
@@ -32,13 +32,14 @@
             
             @foreach (var item in Model)
             {
+               
                 <tr>
-                    <td>@item.RequesterName</td>
-                    <td>@item.RequesterDesignation</td>
+                    <td>@item.Creator.FirstName @item.Creator.MiddleName @item.Creator.LastName</td>
+                    <td>@item.Creator.Designation.DesignationName</td>
                   
                     <th style="font-weight: normal;">@item.FromDate.ToShortDateString()</th>
                     <td>@item.ToDate.ToShortDateString()</td>
-                    <td>@item.VacationName</td>
+                    <td>@item.VacationType.VacationName</td>
                   
                     <td><a href="~/Leave/LeaveDetail/@item.RequestID" class="btn btn-info">Request Details</a></td>
                     
